# code-review-ai

./: .gitignore  README.md  config.py  docker-compose.yml  logging_config.py  main.py  models.py  part_2.txt  pyproject.toml  requirements.txt  routes.py  services.py
app/: config.py  logging_config.py  main.py  models.py  routes.py  services.py
test/: data.py  methods.py  step_check.py  test_main.py
