[tool.poetry]
name = "codereviewai"
version = "0.1.0"
description = ""
authors = ["Dmytro.Ya <dmytro.moz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^75.2.0"
fastapi = "^0.115.3"
python-dotenv = "^1.0.1"
aiohttp = "^3.10.10"
openai = "^1.52.1"
redis = "^5.1.1"
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
